# media_checker

./: .gitignore  CMakeLists.txt  LICENSE (another copy)  Makefile  filesBase.h  filesHash.cpp  filesHash.h  filesPath.h  filesSize.h  main.cpp  merch  start_val.sh
src/: CMakeLists.txt  Makefile  filesHash.h  filesPath.h  report.txt
tests/: CMakeLists.txt  main_test.cpp
